updated media query

--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@
     font-size: 20px;
     align-items: center;
 }
+.navbar__s4{
+    display: none;
+}
 
 /* my learning popup */
 
@@ -150,7 +153,9 @@
 }
 
 .course-card{
-    width: 300px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 .course-card img{
     height: 50%;
@@ -211,6 +216,28 @@
 }
 
 
+/* media quires */
+
+@media screen and (max-width:800px) {
+    body{
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .course-card{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
+}
 
 
 
